--- a/package.json
+++ b/package.json
@@ -36,48 +36,10 @@
   },
   "homepage": "https://github.com/weixin/WeFlow#readme",
   "devDependencies": {
-    "electron-builder": "^4.2.2",
-    "electron-packager": "^7.0.3",
-    "electron-prebuilt": "^0.37.0",
-    "electron-winstaller": "^2.3.1",
-    "rimraf": "^2.5.2"
+
   },
   "dependencies": {
-    "async": "^2.0.0-rc.3",
-    "autoprefixer": "^6.3.3",
-    "browser-sync": "^2.13.0",
-    "crypto-md5": "^1.0.0",
-    "del": "^2.2.0",
     "extract-zip": "^1.5.0",
-    "gulp": "git://github.com/gulpjs/gulp#4.0",
-    "gulp-cssnano": "^2.1.1",
-    "gulp-ejs": "^2.1.1",
-    "gulp-ftp": "^1.1.0",
-    "gulp-if": "^2.0.0",
-    "gulp-imagemin": "^2.4.0",
-    "gulp-lazyimagecss": "^2.0.0",
-    "gulp-less": "^3.0.5",
-    "gulp-postcss": "^6.0.1",
-    "gulp-posthtml": "^1.5.2",
-    "gulp-rename": "^1.2.2",
-    "gulp-replace": "^0.5.4",
-    "gulp-rev-all": "^0.8.22",
-    "gulp-rev-delete-original": "^0.1.0",
-    "gulp-sass": "^2.3.2",
-    "gulp-sftp": "^0.1.5",
-    "gulp-tmtsprite": "^0.0.20",
-    "gulp-uglify": "^1.5.3",
-    "gulp-usemin2": "^0.2.4",
-    "gulp-util": "^3.0.7",
-    "gulp-webp": "^2.3.0",
-    "gulp-zip": "^3.2.0",
-    "imagemin-pngquant": "^4.2.2",
-    "lodash": "^4.5.1",
-    "postcss-pxtorem": "^3.3.1",
-    "posthtml-px2rem": "^0.0.3",
-    "rc": "^1.1.6",
-    "rd": "^0.0.2",
-    "tmt-ejs-helper": "^0.0.1",
-    "vinyl-fs": "^2.4.3"
+    "qiniu": "^6.1.11"
   }
 }
