--- a/appveyor.yml
+++ b/appveyor.yml
@@ -28,10 +28,14 @@ install:
   - ps: Install-Product node $env:nodejs_version
   - node -v
   - npm -v
+  - npm install -g node-gyp
+  - cd C:\projects\weflow\node_modules
+  - git clone --recursive https://github.com/sass/node-sass.git
+  - git submodule update --init --recursive
   - npm install
-#  - npm install node-sass
-#  - npm install -g node-gyp
-#  - cd C:\projects\weflow\node_modules\node-sass
+  - cd C:\projects\weflow\build
+  - node build
+#
 #  - dir
 #  - node-gyp rebuild --target=0.37.8 --arch=x64 --dist-url=https://atom.io/download/atom-shell
 
