--- a/package.json
+++ b/package.json
@@ -6,7 +6,6 @@
   "main": "main.js",
   "scripts": {
     "start": "electron main.js",
-    "install": "node build",
     "build:mac": "rimraf dist && electron-packager ./ WeFlow --platform=darwin --arch=x64 --icon=./assets/img/WeFlow.icns --overwrite --out ./dist/$npm_package_version --version=0.37.8",
     "build:win64": "rimraf dist-win && electron-packager ./ WeFlow --platform=win32 --arch=x64 --icon=./assets/img/WeFlow.png --overwrite --out ./dist-win --version=0.37.8",
     "pack": "build --target dir",
@@ -39,6 +38,8 @@
 
   },
   "dependencies": {
+    "async": "^2.0.0-rc.3",
+    "del": "^2.2.0",
     "extract-zip": "^1.5.0",
     "qiniu": "6.1.11"
   }
