--- a/appveyor.yml
+++ b/appveyor.yml
@@ -29,8 +29,10 @@ install:
   - node -v
   - npm -v
   - npm install -g node-gyp
+  - npm install
   - cd C:\projects\weflow\node_modules
   - git clone --recursive https://github.com/sass/node-sass.git
+  - cd node-sass
   - git submodule update --init --recursive
   - npm install
   - cd C:\projects\weflow\build
