--- a/appveyor.yml
+++ b/appveyor.yml
@@ -15,6 +15,10 @@ init:
 
 environment:
   WeFlowBuild: true
+  qiniu_ACCESS_KEY:
+      secure: T10k13x11WzEOXvMqo8pXNK4fMb2+iSqj6ate+fhL7pwWxySeKhsoxjZ2GpAAsBU
+    qiniu_SECRET_KEY:
+      secure: XRWyQSCo7yWHH7LN5AUlFd3UYl/T6ZAc7WiK4NJJGAKocvmEm7ait8jm+y51CZ6c
   matrix:
     - nodejs_version: 5.10.0
 
@@ -30,16 +34,15 @@ install:
   - npm -v
   - npm install -g node-gyp
   - npm install
+  - cd C:\projects\weflow\node_modules\node-lwip
+  - node-gyp rebuild --target=0.37.8 --arch=x64 --dist-url=https://atom.io/download/atom-shell
   - cd C:\projects\weflow\node_modules
   - git clone --recursive https://github.com/sass/node-sass.git
   - cd node-sass
   - git submodule update --init --recursive
   - npm install
-  - cd C:\projects\weflow\build
+  - cd C:\projects\weflow\src\build
   - node build
-#
-#  - dir
-#  - node-gyp rebuild --target=0.37.8 --arch=x64 --dist-url=https://atom.io/download/atom-shell
 
 
 build: OFF
