--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
   "scripts": {
     "start": "electron main.js",
     "build:mac": "rimraf dist && electron-packager ./ WeFlow --platform=darwin --arch=x64 --icon=./assets/img/WeFlow.icns --overwrite --out ./dist/$npm_package_version --version=0.37.8",
-    "build:win32": "rimraf dist-win && electron-packager ./ WeFlow --platform=win32 --arch=x86 --icon=./assets/img/WeFlow.png --overwrite --out ./dist-win --version=0.37.8",
-    "build:win64": "rimraf dist-win && electron-packager ./ WeFlow --platform=win32 --arch=x64 --icon=./assets/img/WeFlow.png --overwrite --out ./dist-win --version=0.37.8",
+    "build:win32": "rimraf dist && electron-packager ./ WeFlow --platform=win32 --arch=ia32 --icon=./assets/img/WeFlow.png --overwrite --out ./dist --version=0.37.8",
+    "build:win64": "rimraf dist && electron-packager ./ WeFlow --platform=win32 --arch=x64 --icon=./assets/img/WeFlow.png --overwrite --out ./dist --version=0.37.8",
     "pack": "build --target dir",
     "dist": "rimraf dist && build"
   },
@@ -36,16 +36,45 @@
   },
   "homepage": "https://github.com/weixin/WeFlow#readme",
   "devDependencies": {
-
+    "electron-packager": "^7.0.3",
+    "electron-prebuilt": "^1.2.5",
+    "rimraf": "^2.5.2"
   },
   "dependencies": {
     "async": "^2.0.0-rc.3",
+    "autoprefixer": "^6.3.3",
+    "browser-sync": "^2.13.0",
+    "crypto-md5": "^1.0.0",
     "del": "^2.2.0",
+    "electron-prebuilt": "^1.2.5",
     "extract-zip": "^1.5.0",
+    "gulp": "git://github.com/gulpjs/gulp#4.0",
+    "gulp-cssnano": "^2.1.1",
+    "gulp-ejs": "^2.1.1",
+    "gulp-ftp": "^1.1.0",
+    "gulp-if": "^2.0.0",
+    "gulp-imagemin": "^2.4.0",
+    "gulp-lazyimagecss": "^2.0.0",
+    "gulp-less": "^3.0.5",
+    "gulp-postcss": "^6.0.1",
+    "gulp-posthtml": "^1.5.2",
+    "gulp-rename": "^1.2.2",
+    "gulp-replace": "^0.5.4",
+    "gulp-rev-all": "^0.8.22",
+    "gulp-rev-delete-original": "^0.1.0",
+    "gulp-uglify": "^1.5.3",
+    "gulp-usemin2": "^0.2.4",
+    "gulp-util": "^3.0.7",
+    "gulp-webp": "^2.3.0",
+    "imagemin-pngquant": "^4.2.2",
+    "lodash": "^4.5.1",
+    "postcss-pxtorem": "^3.3.1",
+    "posthtml-px2rem": "^0.0.3",
+    "rd": "^0.0.2",
+    "tmt-ejs-helper": "^0.0.1",
     "qiniu": "^6.1.11",
     "rc": "^1.1.6",
     "gulp-zip": "^3.2.0",
-    "gulp-tmtsprite": "^0.0.22",
-    "gulp": "git://github.com/gulpjs/gulp#4.0"
+    "gulp-tmtsprite": "^0.0.22"
   }
 }
