--- a/package.json
+++ b/package.json
@@ -53,14 +53,14 @@
     "gulp-ejs": "^2.1.1",
     "gulp-ftp": "^1.1.0",
     "gulp-if": "^2.0.0",
-    "gulp-imagemin": "^2.4.0",
+    "weflow-imagemin": "^0.0.1",
     "gulp-lazyimagecss": "^2.0.0",
     "gulp-less": "^3.0.5",
     "gulp-postcss": "^6.0.1",
     "gulp-posthtml": "^1.5.2",
     "gulp-rename": "^1.2.2",
     "gulp-replace": "^0.5.4",
-    "gulp-rev-all": "^0.8.22",
+    "weflow-rev-all": "^0.0.1",
     "gulp-rev-delete-original": "^0.1.0",
     "gulp-uglify": "^1.5.3",
     "gulp-usemin2": "^0.2.4",
