--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
     "gulp-rev-delete-original": "^0.1.0",
     "gulp-uglify": "^1.5.3",
     "gulp-usemin2": "^0.2.4",
+    "gulp-sass": "^2.3.2",
     "gulp-util": "^3.0.7",
     "gulp-webp": "^2.3.0",
     "imagemin-pngquant": "^4.2.2",
