--- a/appveyor.yml
+++ b/appveyor.yml
@@ -33,6 +33,7 @@ install:
   - node -v
   - npm -v
   - npm install -g node-gyp
+  - npm install -g rimraf
   - npm install
   - cd C:\projects\weflow\node_modules\node-lwip
   - node-gyp rebuild --target=0.37.8 --arch=x64 --dist-url=https://atom.io/download/atom-shell
