--- a/appveyor.yml
+++ b/appveyor.yml
@@ -37,12 +37,10 @@ install:
   - npm install
   - cd C:\projects\weflow\node_modules\node-lwip
   - node-gyp rebuild --target=0.37.8 --arch=x64 --dist-url=https://atom.io/download/atom-shell
-  - cd C:\projects\weflow\node_modules
-  - rimraf node-sass
-  - git clone --recursive https://github.com/sass/node-sass.git
-  - cd node-sass
-  - git submodule update --init --recursive
-  - npm install
+  - cd C:\projects\weflow\node_modules\node-sass
+  - node-gyp rebuild --target=0.37.8 --arch=x64 --dist-url=https://atom.io/download/atom-shell
+  - cd C:\projects\weflow
+  - node run build:win32
   - cd C:\projects\weflow\src\build
   - node build
 
