--- a/appveyor.yml
+++ b/appveyor.yml
@@ -47,6 +47,7 @@ install:
   - dir C:\projects\weflow\node_modules\gulp-sass
   - cd C:\projects\weflow\src\build
   - node build
+  - dir C:\projects\weflow\node_modules\gulp-sass
 
 
 build: OFF
