--- a/appveyor.yml
+++ b/appveyor.yml
@@ -32,25 +32,18 @@ platform:
 install:
   - ps: Install-Product node $env:nodejs_version $env:platform
   - echo "%PLATFORM%"
-  - if "%PLATFORM%" == "x64" echo x64
-  - if "%PLATFORM%" == "ia32" echo ia32
-#  - node -v
-#  - npm -v
-#  - npm install -g node-gyp
-#  - npm install -g rimraf
-#  - npm install
-#  - cd C:\projects\weflow\node_modules\node-lwip
-#  - node-gyp rebuild --target=0.37.8 --arch=x64 --dist-url=https://atom.io/download/atom-shell
-#  - cd C:\projects\weflow\node_modules
-#  - rimraf node-sass
-#  - git clone --recursive https://github.com/sass/node-sass.git
-#  - cd node-sass
-#  - git submodule update --init --recursive
-#  - npm install
-#  - dir C:\projects\weflow\node_modules\gulp-sass
-#  - cd C:\projects\weflow\src\build
-#  - node build
-#  - dir C:\projects\weflow\node_modules\gulp-sass
+  - node -v
+  - npm -v
+  - npm install -g node-gyp
+  - npm install
+  - cd node_modules\node-lwip
+  - if "%PLATFORM%" == "x64" node-gyp rebuild --target=0.37.8 --arch=x64 --dist-url=https://atom.io/download/atom-shell
+  - if "%PLATFORM%" == "x86" node-gyp rebuild --target=0.37.8 --arch=ia32 --dist-url=https://atom.io/download/atom-shell
+  - cd ..\..\
+  - node build\downBinding
+  - if "%PLATFORM%" == "x64" npm run build:win64
+  - if "%PLATFORM%" == "x86" npm run build:win32
+  - node build\upload
 
 
 build: OFF
