--- a/package.json
+++ b/package.json
@@ -6,9 +6,9 @@
   "main": "main.js",
   "scripts": {
     "start": "electron main.js",
-    "build:mac": "rimraf dist && electron-packager ./ WeFlow --platform=darwin --arch=x64 --icon=./assets/img/WeFlow.icns --overwrite --out ./dist/$npm_package_version --version=0.37.8",
-    "build:win32": "rimraf dist && electron-packager ./ WeFlow --platform=win32 --arch=ia32 --icon=./assets/img/WeFlow.png --overwrite --out ./dist --version=0.37.8",
-    "build:win64": "rimraf dist && electron-packager ./ WeFlow --platform=win32 --arch=x64 --icon=./assets/img/WeFlow.png --overwrite --out ./dist --version=0.37.8",
+    "build:mac": "rimraf dist && electron-packager ./ WeFlow --platform=darwin --arch=x64 --icon=./assets/img/WeFlow.icns --overwrite --out ./dist/$npm_package_version --version=0.37.8 --ignore='(.github|.DS_Store)'",
+    "build:win32": "rimraf dist && electron-packager ./ WeFlow --platform=win32 --arch=ia32 --icon=./assets/img/WeFlow.png --overwrite --out ./dist --version=0.37.8 --ignore='(.github|.DS_Store)'",
+    "build:win64": "rimraf dist && electron-packager ./ WeFlow --platform=win32 --arch=x64 --icon=./assets/img/WeFlow.png --overwrite --out ./dist --version=0.37.8 --ignore='(.github|.DS_Store)'",
     "pack": "build --target dir",
     "dist": "rimraf dist && build"
   },
@@ -65,6 +65,7 @@
     "gulp-uglify": "^1.5.3",
     "gulp-usemin2": "^0.2.4",
     "gulp-sass": "^2.3.2",
+    "gulp-sftp": "^0.1.5",
     "gulp-util": "^3.0.7",
     "gulp-webp": "^2.3.0",
     "imagemin-pngquant": "^4.2.2",
