--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,11 @@ cache:
 node_js:
   - "5.10.0"
 env:
-  - CXX=g++-4.8
+  global:
+    - CXX=g++-4.8
+  matrix:
+    - TRAVIS_NODE_VERSION="5"
+    - TRAVIS_NODE_VERSION="5" ARCH="x86"
 addons:
   apt:
     sources:
