--- a/.travis.yml
+++ b/.travis.yml
@@ -18,6 +18,10 @@ addons:
     - g++-4.8
 before_script:
   - npm install
-  - npm run build:mac
-  - zip -r dist.zip dist
+  # download node if testing x86 architecture
+   - if [[ "$ARCH" == "x86" ]]; then
+      npm run build:linux32
+    else
+      npm run build:linux64
+  fi
 script: node build/upload.js
