--- a/.travis.yml
+++ b/.travis.yml
@@ -18,10 +18,9 @@ addons:
     - g++-4.8
 before_script:
   - npm install
-  # download node if testing x86 architecture
-   - if [[ "$ARCH" == "x86" ]]; then
-      npm run build:linux32
+  - if [[ "$ARCH" == "x86" ]]; then
+    - npm run build:linux32
     else
-      npm run build:linux64
+    - npm run build:linux64
   fi
 script: node build/upload.js
