--- a/.travis.yml
+++ b/.travis.yml
@@ -18,5 +18,8 @@ addons:
     - g++-4.8
 before_script:
   - npm install
-  - if [[ "$ARCH" == "x86" ]]; then npm run build:linux32; else npm run build:linux64; fi;
+  - if [[ "$ARCH" == "x86" ]]; then
+    npm run build:linux32;
+    else npm run build:linux64;
+    fi
 script: node build/upload.js
